Allow input for rc-version

--- a/.github/workflows/bump-rc-version.yml
+++ b/.github/workflows/bump-rc-version.yml
@@ -2,20 +2,26 @@ name: Bump RC Version in Release Branch
 
 on:
   workflow_dispatch:
+    inputs:
+      custom_version:
+        description: 'Custom version to set (optional). If not provided, will increment RC by 1'
+        required: false
+        type: string
 
 jobs:
-  sync:
+  bump-rc-version:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
         with:
           ref: main
+          fetch-depth: 0  # Fetch all history for all branches
 
-      - name: Define all versions
-        id: versions
+
+      - name: Get current release branch
+        id: release-branch
         shell: bash
-        # We only need `major.minor` in Readme so we cut the full version string to the first two tokens
         run: |
           echo "current_release_minor=$(cut -d "." -f 1,2 < VERSION.txt)" >> "$GITHUB_OUTPUT"
 
@@ -30,36 +36,45 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
           # Get the current release branch
-          RELEASE_BRANCH="v${{ steps.versions.outputs.current_release_minor }}.x"
-          git checkout $RELEASE_BRANCH
+          RELEASE_BRANCH="v${{ steps.release-branch.outputs.current_release_minor }}.x"
+          # git checkout $RELEASE_BRANCH
+
+          # Check if the release branch exists remotely
+          if ! git ls-remote --heads origin $RELEASE_BRANCH | grep -q $RELEASE_BRANCH; then
+            echo "Error: Release branch $RELEASE_BRANCH does not exist on remote"
+            exit 1
+          fi
+          
+          # Checkout the release branch (create local tracking branch if needed)
+          git checkout -B $RELEASE_BRANCH origin/$RELEASE_BRANCH
 
           # Store the original version before updating
           ORIGINAL_VERSION=$(cat VERSION.txt)
 
-          # Create a new branch for the version bump
-          BUMP_BRANCH="bump-rc-version-$(date +%s)"
-          git checkout -b $BUMP_BRANCH
-
-          # Update the rc version in VERSION.txt
-          if [[ $ORIGINAL_VERSION =~ rc[0-9]+$ ]]; then
-            # If version already has rc suffix, increment the rc number
-            NEW_VERSION=$(echo "$ORIGINAL_VERSION" | sed -E 's/rc([0-9]+)$/rc\1/' | awk -F'rc' '{print $1 "rc" ($2+1)}')
+          # Determine the new version
+          CUSTOM_VERSION="${{ github.event.inputs.custom_version }}"
+          if [[ -n "$CUSTOM_VERSION" ]]; then
+            # Use the custom version provided by user
+            NEW_VERSION="$CUSTOM_VERSION"
+            echo "Using custom version: $NEW_VERSION"
           else
-            # raise an error
-            echo "Error: VERSION.txt does not contain a rc version"
-            exit 1
+            # Auto-increment the rc version
+            if [[ $ORIGINAL_VERSION =~ rc[0-9]+$ ]]; then
+              # If version already has rc suffix, increment the rc number
+              NEW_VERSION=$(echo "$ORIGINAL_VERSION" | sed -E 's/rc([0-9]+)$/rc\1/' | awk -F'rc' '{print $1 "rc" ($2+1)}')
+              echo "Auto-incrementing RC version: $NEW_VERSION"
+            else
+              # raise an error
+              echo "Error: VERSION.txt does not contain a rc version and no custom version provided"
+              exit 1
+            fi
           fi
+          
           echo "$NEW_VERSION" > VERSION.txt
 
           # Commit and push the version bump
           git add .
           git commit -m "bump rc version to $NEW_VERSION"
-          git push -u origin $BUMP_BRANCH
+          git push -u origin $RELEASE_BRANCH
 
-          # Create the PR to merge back into the release branch
-          gh pr create -B $RELEASE_BRANCH \
-            -H $BUMP_BRANCH \
-            --title "Bump rc version to $NEW_VERSION" \
-            --body "This PR bumps the rc version in VERSION.txt from $ORIGINAL_VERSION to $NEW_VERSION in the $RELEASE_BRANCH branch."
-
-
+          echo "Successfully bumped rc version from $ORIGINAL_VERSION to $NEW_VERSION on $RELEASE_BRANCH"
